--- a/crates/cairo-lang-semantic/Cargo.toml
+++ b/crates/cairo-lang-semantic/Cargo.toml
@@ -19,19 +19,24 @@ cairo-lang-plugins = { path = "../cairo-lang-plugins", version = "~2.8.4" }
 cairo-lang-proc-macros = { path = "../cairo-lang-proc-macros", version = "~2.8.4" }
 cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.8.4" }
 cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.8.4" }
-cairo-lang-test-utils = { path = "../cairo-lang-test-utils", version = "~2.8.4", optional = true, features = ["testing"] }
+cairo-lang-test-utils = { path = "../cairo-lang-test-utils", version = "~2.8.4", optional = true, features = [
+    "testing",
+] }
 id-arena.workspace = true
 indoc.workspace = true
 itertools = { workspace = true, default-features = true }
 num-bigint = { workspace = true, default-features = true }
 num-traits = { workspace = true, default-features = true }
+regex.workspace = true
 salsa.workspace = true
 smol_str.workspace = true
 toml = { workspace = true, optional = true }
 
 [dev-dependencies]
 cairo-lang-plugins = { path = "../cairo-lang-plugins" }
-cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
+cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = [
+    "testing",
+] }
 env_logger.workspace = true
 log.workspace = true
 pretty_assertions.workspace = true
